<resources>
    <string name="app_name">Mind</string>

    <!-- LoginActivity -->
    <string name="skip">跳过</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="sign_in">登录</string>
    <string name="immediate_registration">立即注册</string>
    <string name="forget_password">忘记密码</string>

    <string name="register">注册</string>
    <string name="validate_code">验证码</string>
    <string name="get_validate_code">获取验证码</string>
    <string name="sure_password">确认密码</string>
    <string name="submit">提交</string>

    <string name="top">状元</string>
    <string name="qiandao">每日签到奖励</string>
    <string name="zhishiku">知识库</string>
    <string name="xinyuan">心愿墙</string>
    <string name="shoucang">我的收藏</string>
    <string name="banben">版本号</string>

    <string name="setting">设置</string>
</resources>
