<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/login_top_ll"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:src="@mipmap/login_top"
        android:layout_marginTop="-20dp"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/login_top_ll">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/phone"
                android:layout_centerVertical="true"
                android:drawablePadding="10dp"
                android:hint="@string/phone"
                android:textSize="14sp"
                android:background="@null"
                android:inputType="phone"
                android:maxLines="1"
                android:maxLength="11"
                android:singleLine="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffe6e6e6"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/password"
                android:hint="@string/password"
                android:drawablePadding="10dp"
                android:layout_centerVertical="true"
                android:background="@null"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffe6e6e6"
                android:layout_alignParentBottom="true"/>

            <ImageView
                android:id="@+id/yanjing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/show"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:background="@drawable/search_title_bg"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <View
                android:id="@+id/register_view"
                android:layout_width="1dp"
                android:layout_height="10dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tv_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_toLeftOf="@+id/register_view"
                android:text="@string/immediate_registration" />

            <TextView
                android:id="@+id/tv_login_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/register_view"
                android:text="@string/forget_password" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>