<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/user_bg_iv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/user_bg"
        android:layout_marginTop="-30dp"/>

    <LinearLayout
        android:id="@+id/top_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/top"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="3dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/jinbi"/>
            <TextView
                android:id="@+id/golden_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="3dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@id/top_ll"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/touxiang_img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/touxiang"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_title"
            android:text="王小花"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp">
            <TextView
                android:id="@+id/school_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="北京六小"
                android:layout_centerVertical="true"/>
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/duihao"
                android:layout_toRightOf="@id/school_tv"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/qiandao_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_ll"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/squre_bg"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"/>
        <ImageView
            android:id="@+id/qiandao_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/qiandao"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/qiandao"
            android:layout_toRightOf="@id/qiandao_iv"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/zhishiku_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qiandao_rv"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/squre_bg"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"/>
        <ImageView
            android:id="@+id/zhishiku_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/zhishiku"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/zhishiku"
            android:layout_toRightOf="@id/zhishiku_iv"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/xinyuan_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zhishiku_rv"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/squre_bg"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"/>
        <ImageView
            android:id="@+id/xinyuan_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/xinyuan"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/xinyuan"
            android:layout_toRightOf="@id/xinyuan_iv"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/shoucang_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xinyuan_rv"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/squre_bg"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"/>
        <ImageView
            android:id="@+id/shoucang_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/shoucang"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/shoucang"
            android:layout_toRightOf="@id/shoucang_iv"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/banben_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shoucang_rv"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/squre_bg" />
        <ImageView
            android:id="@+id/banben_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/banben"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting"
            android:layout_toRightOf="@id/banben_iv"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textSize="16sp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tab"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_alignParentBottom="true">
        <ImageView
            android:id="@+id/home"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:src="@mipmap/tab_home_1"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/pk"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:src="@mipmap/tab_pk_1"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/team"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:src="@mipmap/tab_team_1"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/mine"
            android:layout_width="30dp"
            android:layout_height="60dp"
            android:src="@mipmap/tab_mine_2"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>